--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,6 +1,6 @@
 .main{
-    background-color: #546555;
-    box-shadow: 0px 0px 4px 2px green;
+    background-color: #546464;
+    /* box-shadow: 0px 0px 4px 2px green; */
 }
 
 .batch-btn{
