--- a/client/src/TrainerDashboard/pages/Assignment/assignment.css
+++ b/client/src/TrainerDashboard/pages/Assignment/assignment.css
@@ -2,3 +2,25 @@ h1{
     font-size: 30px;
     padding: 1rem;
 }   
+
+
+@media (max-width: 320px){
+    .main_data{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 375px){
+    .description{
+        width: 50%;
+    }
+
+}
+
+@media (max-width: 768px){
+    .main_data{
+        display: flex;
+        flex-direction: column;
+    }
+}
